@@ -78,14 +78,16 @@ dependencies {
     implementation 'com.vladsch.flexmark:flexmark-all:0.60.2' // for markdown to pdf conversion (sonarqube reports)
 
     testImplementation "org.spockframework:spock-core:1.3-groovy-2.4"
-    testImplementation ("com.athaydes:spock-reports:1.8.0") { transitive = false }
+    testImplementation ("com.athaydes:spock-reports:1.7.1") { transitive = false }
 
     testImplementation "com.lesfurets:jenkins-pipeline-unit:1.3"
     testImplementation "net.bytebuddy:byte-buddy:1.10.8"
     testImplementation "org.objenesis:objenesis:3.1"
     testImplementation "cglib:cglib-nodep:3.3.0"                      // for mocking classes
     testImplementation "com.github.stefanbirkner:system-rules:1.19.0" // for managing environment variables
-    testImplementation "com.github.tomakehurst:wiremock:2.27.2"       // for mocking HTTP server reponses
+    testImplementation "com.github.tomakehurst:wiremock-jre8:2.27.2" // for mocking HTTP server reponses
+    testImplementation group: 'de.redsix', name: 'pdfcompare', version: '1.1.58'
+
     testImplementation "org.hamcrest:hamcrest:2.1"
 }
 
@@ -116,6 +118,8 @@ test {
     }
     systemProperty 'com.athaydes.spockframework.report.projectName', 'ods-jenkins-shared-library'
     systemProperty 'com.athaydes.spockframework.report.projectVersion', version
+    maxHeapSize = "1024m"
+    jvmArgs "-XX:MaxPermSize=256m"
 }
 
 codenarc {
